--- a/src/main/resources/AjoutHotel.fxml
+++ b/src/main/resources/AjoutHotel.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.image.ImageView?>
+
 
 <GridPane xmlns="http://javafx.com/javafx/23.0.1"
           xmlns:fx="http://javafx.com/fxml/1"
@@ -48,6 +50,18 @@
     <ChoiceBox fx:id="typeChoice"
                style="-fx-background-color: #ffffff; -fx-border-color: #ccc; -fx-border-radius: 8; -fx-background-radius: 8; -fx-font-size: 13px; -fx-padding: 4 6;"
                GridPane.rowIndex="6" GridPane.columnIndex="1" />
+
+    <Label text="Image de l'hôtel:" style="-fx-font-weight: bold; -fx-text-fill: #34495e;" GridPane.rowIndex="7" GridPane.columnIndex="0" />
+    <Button text="Choisir l'image"
+            onAction="#onChooseImage"
+            style="-fx-background-color: #00c6ff; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 8; -fx-padding: 6 16; -fx-cursor: hand;"
+            GridPane.rowIndex="7" GridPane.columnIndex="1" />
+
+    <ImageView fx:id="imageView"
+              style="-fx-border-color: #ccc; -fx-border-radius: 8; -fx-background-radius: 8;"
+              fitHeight="150" fitWidth="150"
+              GridPane.rowIndex="8" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
+
 
     <Label fx:id="errorLabel"
            style="-fx-text-fill: #D32F2F; -fx-font-size: 12px;"
